@@ -1,28 +1,25 @@
 package ru.practicum.shareit.item.service;
 
 import org.springframework.stereotype.Service;
-import ru.practicum.shareit.exceptions.ForbiddenException;
-import ru.practicum.shareit.exceptions.UserNotFoundException;
-import ru.practicum.shareit.item.ItemMapper;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemUpdateDto;
+import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
-import ru.practicum.shareit.user.repository.UserRepository;
+import ru.practicum.shareit.item.validation.ItemValidator;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository itemRepository;
-    private final UserRepository userRepository;
+    private final ItemValidator itemValidator;
 
-    public ItemServiceImpl(ItemRepository itemRepository, UserRepository userRepository) {
+    public ItemServiceImpl(ItemRepository itemRepository, ItemValidator itemValidator) {
         this.itemRepository = itemRepository;
-        this.userRepository = userRepository;
+        this.itemValidator = itemValidator;
     }
 
     @Override
@@ -30,58 +27,36 @@ public class ItemServiceImpl implements ItemService {
         return itemRepository.findByUserId(userId);
     }
 
-
     @Override
     public ItemDto addItem(ItemDto itemDto, Long userId) {
-        if (!userExists(userId)) {
-            throw new UserNotFoundException(userId);
-        }
-
+        itemValidator.validateUserId(userId);
         Item item = ItemMapper.toEntity(itemDto);
         item.setUserId(userId);
         Item savedItem = itemRepository.saveItem(item);
         return ItemMapper.toDto(savedItem);
     }
 
-    private boolean userExists(Long userId) {
-        if (userId == null || userId <= 0) {
-            return false;
-        }
-        return userRepository.existsById(userId);
-    }
-
     @Override
     public void deleteItem(long userId, long itemId) {
-        if (userId <= 0 || itemId <= 0) {
-            throw new IllegalArgumentException("userId и itemId должны быть положительными числами");
-        }
+        itemValidator.validateUserId(userId);
+        itemValidator.validateItemId(itemId);
         itemRepository.deleteByUserIdAndItemId(userId, itemId);
     }
 
     @Override
     public ItemDto updateItem(Long itemId, ItemUpdateDto updateDto, Long userId) {
+        itemValidator.validateItemId(itemId);
+        itemValidator.validateUserId(userId);
+        itemValidator.validateUpdateDto(updateDto);
+
         Item existingItem = itemRepository.findById(itemId);
         if (existingItem == null) {
-            throw new NoSuchElementException("Вещь не найдена");
-        }
-        if (!existingItem.getUserId().equals(userId)) {
-            throw new ForbiddenException("Только владелец может редактировать вещь");
+            throw new NoSuchElementException("Вещь с ID=" + itemId + " не найдена");
         }
 
-        // Обновляем только не‑null поля
-        if (updateDto.getName() != null) {
-            existingItem.setName(updateDto.getName());
-        }
-        if (updateDto.getDescription() != null) {
-            existingItem.setDescription(updateDto.getDescription());
-        }
-        if (updateDto.getAvailable() != null) {
-            existingItem.setAvailable(updateDto.getAvailable());
-        }
-        if (updateDto.getRequestId() != null) {
-            existingItem.setRequestId(updateDto.getRequestId());
-        }
+        itemValidator.validateOwner(existingItem, userId);
 
+        applyUpdates(existingItem, updateDto);
         Item updatedItem = itemRepository.saveItem(existingItem);
         return ItemMapper.toDto(updatedItem);
     }
@@ -89,6 +64,7 @@ public class ItemServiceImpl implements ItemService {
 
     @Override
     public ItemDto getItemById(Long itemId) {
+        itemValidator.validateItemId(itemId);
         Item item = itemRepository.findById(itemId);
         if (item == null) {
             throw new NoSuchElementException("Вещь с ID=" + itemId + " не найдена");
@@ -98,27 +74,29 @@ public class ItemServiceImpl implements ItemService {
 
     @Override
     public List<ItemDto> getItemsByOwner(Long userId) {
-        if (userId == null || userId <= 0) {
-            throw new IllegalArgumentException("ID пользователя должен быть положительным числом");
-        }
+        itemValidator.validateUserId(userId); // Используем валидатор вместо ручной проверки
         return itemRepository.findAllByUserId(userId)
                 .stream()
                 .map(ItemMapper::toDto)
-                .toList(); // проще, чем Collectors.toList()
+                .toList();
     }
-
 
     @Override
     public List<ItemDto> searchItems(String text) {
         if (text == null || text.trim().isEmpty()) {
             return List.of();
         }
-
         String normalizedText = text.trim().toLowerCase();
-
-        return itemRepository.searchAvailableByText(normalizedText).stream()
+        return itemRepository.searchAvailableByText(normalizedText)
+                .stream()
                 .map(ItemMapper::toDto)
-                .collect(Collectors.toList());
+                .toList(); // Используем toList() вместо Collectors.toList()
     }
 
+    private void applyUpdates(Item item, ItemUpdateDto updateDto) {
+        if (updateDto.getName() != null) item.setName(updateDto.getName());
+        if (updateDto.getDescription() != null) item.setDescription(updateDto.getDescription());
+        if (updateDto.getAvailable() != null) item.setAvailable(updateDto.getAvailable());
+        if (updateDto.getRequestId() != null) item.setRequestId(updateDto.getRequestId());
+    }
 }
